--- a/package.json
+++ b/package.json
@@ -1,123 +1,150 @@
 {
-  "name": "objection",
-  "version": "2.2.14",
-  "description": "An SQL-friendly ORM for Node.js",
-  "main": "lib/objection.js",
-  "license": "MIT",
+  "name": "damn-vulnerable-sca",
+  "version": "1.0.0",
+  "description": "SCAGoat is a software composition analysis vulnerable designed application to help identify and understand SCA related security vulnerabilities in your applications",
+  "main": "index.js",
   "scripts": {
-    "test": "npm run eslint && mocha --slow 10 --timeout 15000 --reporter spec --recursive tests --exclude \"tests/unit/relations/files/**\"",
-    "test-travis": "nyc mocha --slow 100 --timeout 60000 --reporter spec --recursive tests --exclude \"tests/unit/relations/files/**\" && npm run test-typings",
-    "test-fast": "mocha --slow 10 --timeout 15000 --reporter spec --recursive tests --bail --exclude \"tests/unit/relations/files/**\"",
-    "test-opt": "mocha --slow 10 --timeout 15000 --reporter spec --recursive tests --bail --trace_opt --trace_deopt --exclude \"tests/unit/relations/files/**\"",
-    "test-debug": "mocha --slow 10 --timeout 15000 --reporter spec --recursive tests --inspect-brk --exclude \"tests/unit/relations/files/**\"",
-    "test-sqlite": "cross-env DATABASES=sqlite3 mocha --slow 10 --timeout 15000 --reporter spec --recursive tests --exclude \"tests/unit/relations/files/**\"",
-    "test-typings": "tsc",
-    "coveralls": "cat ./testCoverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js",
-    "perf": "mocha --slow 60000 --timeout 60000 --reporter spec --recursive perf",
-    "perf-debug": "mocha --slow 60000 --timeout 60000 --reporter spec --inspect-brk perf",
-    "perf-opt": "mocha --slow 60000 --timeout 60000 --reporter spec --recursive perf --trace_opt --trace_deopt",
-    "prettier": "prettier --write \"{examples,lib,tests,typings,doc}/**/*.{js,ts}\"",
-    "eslint": "eslint --format codeframe \"examples/**/*.js\" \"lib/**/*.js\" \"tests/**/*.js\"",
-    "docs:dev": "vuepress dev doc",
-    "docs:build": "vuepress build doc"
+    "start:concurrent": "nodemon index.js"
   },
-  "publishConfig": {
-    "tag": "next"
-  },
-  "author": {
-    "name": "Sami Koskimäki",
-    "email": "sami@jakso.me",
-    "url": "https://github.com/koskimas"
-  },
-  "contributors": [
-    "Sami Koskimäki <sami@jakso.me> (https://github.com/koskimas)",
-    "Mikael Lepistö <mikael.lepisto@vincit.com> (https://github.com/elhigu)",
-    "Matthew McEachen <matthew-objection@photostructure.com> (https://github.com/mceachen)",
-    "Jürg Lehni <juerg@scratchdisk.com> (https://github.com/lehni)",
-    "Igor Savin <kibertoad@gmail.com> (https://github.com/kibertoad)"
-  ],
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/vincit/objection.js.git"
-  },
-  "engines": {
-    "node": ">=8.0.0"
-  },
-  "keywords": [
-    "orm",
-    "knex",
-    "sql",
-    "query",
-    "query builder",
-    "postgresql",
-    "mysql",
-    "sqlite3"
-  ],
-  "files": [
-    "README.md",
-    "LICENSE",
-    "lib/*",
-    "typings/*"
-  ],
-  "types": "./typings/objection/index.d.ts",
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "ajv": "^6.12.6",
-    "db-errors": "^0.2.3"
-  },
-  "peerDependencies": {
-    "knex": "0.x"
+    "express": "0.0.1",
+    "electron": "0.0.1",
+    "ip": "0.0.1",
+    "jssha": "0.0.1",
+    "jws": "0.0.1",
+    "lodash": "0.0.1",
+    "async": "0.0.1",
+    "request": "0.0.1",
+    "moment": "0.0.1",
+    "chalk": "0.0.1",
+    "mongoose": "0.0.1",
+    "mysql": "0.0.1",
+    "debug": "0.0.1",
+    "uuid": "0.0.1",
+    "bcrypt": "0.0.1",
+    "validator": "0.0.1",
+    "cors": "0.0.1",
+    "morgan": "0.0.1",
+    "helmet": "0.0.1",
+    "nodemailer": "0.0.1",
+    "dotenv": "0.0.1",
+    "passport": "0.0.1",
+    "jsonwebtoken": "0.0.1",
+    "express-session": "0.0.1",
+    "redis": "0.0.1",
+    "bluebird": "0.0.1",
+    "winston": "0.0.1",
+    "multer": "0.0.1",
+    "socket.io": "0.0.1",
+    "superagent": "0.0.1",
+    "compression": "0.0.1",
+    "serve-static": "0.0.1",
+    "xml2js": "0.0.1",
+    "sequelize": "0.0.1",
+    "pg": "0.0.1",
+    "body-parser": "0.0.1",
+    "cookie-parser": "0.0.1",
+    "ca": "0.0.1",
+    "marked": "0.0.1",
+    "node-fetch": "0.0.1",
+    "pug": "0.0.1",
+    "serialize-javascript": "0.0.1",
+    "trim-newlines": "0.0.1",
+    "ws": "0.0.1",
+    "xss": "0.0.1",
+    "ejs": "0.0.1",
+    "handlebars": "0.0.1",
+    "font-awesome": "0.0.1",
+    "csurf": "0.0.1",
+    "dot-prop": "0.0.1",
+    "fetch": "0.0.1",
+    "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.5",
+    "csurf": "^1.12.0",
+
+    "dot-prop": "4.2.0",
+
+    "ejs": "2.6.1",
+
+    "express": "^4.18.2",
+
+    "fetch": "^1.1.0",
+
+    "font-awesome": "^4.7.0",
+    "handlebars": "4.0.14",
+    "ip": "^1.1.8",
+    "jsonwebtoken": "^8.5.1",
+    "jssha": "2.3.1",
+    "jws": "3.2.2",
+    "async": "0.1.22",
+    "request": "2.0.0",
+    "moment": "1.0.0",
+    "chalk": "0.1.0",
+    "mongoose": "3.0.0",
+    "mysql": "2.0.0",
+    "debug": "0.1.0",
+    "uuid": "1.0.0",
+    "bcrypt": "0.1.0",
+    "validator": "0.1.0",
+    "cors": "0.1.0",
+    "morgan": "0.1.0",
+    "helmet": "0.0.1",
+    "nodemailer": "0.1.0",
+    "dotenv": "0.0.1",
+    "passport": "0.1.0",
+    "jsonwebtoken": "0.1.0",
+    "express-session": "0.0.1",
+    "redis": "0.1.0",
+    "bluebird": "0.1.0",
+    "winston": "0.1.0",
+    "multer": "0.1.0",
+    "socket.io": "0.6.0",
+    "superagent": "0.1.0",
+    "compression": "0.0.1",
+    "serve-static": "1.0.0",
+    "xml2js": "0.1.0",
+    "sequelize": "1.0.0",
+    "pg": "0.1.0",
+    "body-parser": "0.1.0",
+    "cookie-parser": "0.1.0",
+    "ca": "1.0.0",
+
+    "lodash": "4.17.11",
+
+    "marked": "^0.3.5",
+    "node-fetch": "^3.3.2",
+    "pug": "^2.0.4",
+    "serialize-javascript": "2.1.1",
+    "trim-newlines": "4.0.0",
+    "ws": "6.2.1",
+
+    "xss": "0.3.3"
+
   },
   "devDependencies": {
-    "@types/node": "^14.14.13",
-    "chai": "^4.2.0",
-    "chai-subset": "^1.6.0",
-    "coveralls": "^3.1.0",
-    "cross-env": "^7.0.3",
-    "eslint": "^7.15.0",
-    "eslint-plugin-prettier": "^3.2.0",
-    "expect.js": "^0.3.1",
-    "fs-extra": "^9.0.1",
-    "glob": "^7.1.6",
-    "husky": "^4.3.6",
-    "knex": "0.21.15",
-    "lint-staged": "^10.5.3",
-    "mocha": "^8.2.1",
-    "mysql": "^2.18.1",
-    "nyc": "^15.1.0",
-    "pg": "^8.5.1",
-    "prettier": "2.2.1",
-    "sqlite3": "^5.0.0",
-    "typescript": "^4.1.3",
-    "vuepress": "1.7.1"
-  },
-  "nyc": {
-    "description": "test coverage",
-    "exclude": [
-      "lib/queryBuilder/parsers/jsonFieldExpressionParser.js",
-      "lib/queryBuilder/parsers/relationExpressionParser.js",
-      "testUtils/*",
-      "lib/utils/clone.js"
-    ],
-    "reporter": [
-      "lcov",
-      "text"
-    ],
-    "report-dir": "./testCoverage"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "lint-staged": {
-    "*.js": [
-      "prettier --write",
-      "eslint --fix",
-      "git add"
-    ],
-    "*.{yml,ts}": [
-      "prettier --write",
-      "git add"
-    ]
+    "eslint": "^1.0.0",
+    "jest": "^1.0.0",
+    "mocha": "^1.0.0",
+    "chai": "^1.0.0",
+    "supertest": "^1.0.0",
+    "prettier": "^1.0.0",
+    "ts-node": "^1.0.0",
+    "typescript": "^1.0.0",
+    "@types/express": "^1.0.0",
+    "@types/node": "^1.0.0",
+    "@types/jest": "^1.0.0",
+    "@types/mocha": "^1.0.0",
+    "@types/chai": "^1.0.0",
+    "@types/supertest": "^1.0.0",
+    "@types/prettier": "^1.0.0",
+    "@types/ts-node": "^1.0.0",
+    "@types/typescript": "^1.0.0",
+    "@typescript-eslint/eslint-plugin": "^1.0.0",
+    "@typescript-eslint/parser": "^1.0.0",
+    "nodemon": "^1.0.0"
+    
   }
 }
